Changes to user files and view page: - Add a method for accessing loginUser in UserController file - Add an id to target the form - Add top padding to the form (so that it's not hidden under the nav bar) - Fix route path for 'getUsers' (needed a '/' in front of 'api/users')

--- a/angularApp/src/app/index.css
+++ b/angularApp/src/app/index.css
@@ -56,3 +56,7 @@ h1.title {
 a {
   color: white;
 }
+
+#user-form {
+  margin-top: 60px;
+}
